; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu.c_bhnd_pmu_write_chipctrl_method.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu.c_bhnd_pmu_write_chipctrl_method.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_pmu_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32)* @bhnd_pmu_write_chipctrl_method to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bhnd_pmu_write_chipctrl_method(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.bhnd_pmu_softc*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.bhnd_pmu_softc* @device_get_softc(i32 %10)
  store %struct.bhnd_pmu_softc* %11, %struct.bhnd_pmu_softc** %9, align 8
  %12 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %9, align 8
  %13 = call i32 @BPMU_LOCK(%struct.bhnd_pmu_softc* %12)
  %14 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %9, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @BHND_PMU_CCTRL_WRITE(%struct.bhnd_pmu_softc* %14, i32 %15, i32 %16, i32 %17)
  %19 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %9, align 8
  %20 = call i32 @BPMU_UNLOCK(%struct.bhnd_pmu_softc* %19)
  ret void
}

declare dso_local %struct.bhnd_pmu_softc* @device_get_softc(i32) #1

declare dso_local i32 @BPMU_LOCK(%struct.bhnd_pmu_softc*) #1

declare dso_local i32 @BHND_PMU_CCTRL_WRITE(%struct.bhnd_pmu_softc*, i32, i32, i32) #1

declare dso_local i32 @BPMU_UNLOCK(%struct.bhnd_pmu_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
